<resources>
    <string name="app_name">Prueba</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Mensaje_Bienvenida">Bienvenido a la aplicación</string>
    <string name="Nombre_App">Porras F1</string>
    <string name="Descripcion_Inicial">Por favor, inicie sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="inicia_sesion">Iniciar sesión</string>
    <string name="registro">Si no posee una cuenta de usuario, registrese aquí</string>
    <string name="registro_boton">Registrarme</string>
    <string name="registro_2">Si no posee una cuenta de usuario, regístrese aquí</string>
    <string name="title_activity_registro">Registro</string>
    <string name="pantalla_registro">Introduzca el nombre de usuario y la contraseña de su nueva cuenta</string>
    <string name="title_activity_pantalla_ligas">PantallaLigas</string>
    <string name="contentAñadirLiga">Botón para entrar en una liga</string>
    <string name="Texto_boton">Nombre de liga</string>
    <string name="mis_ligas">Mis Ligas</string>
    <string name="liga_de_prueba">Liga de prueba</string>
    <string name="clasificacion">Ver clasificación</string>
    <string name="realizar_porra">Realizar porra</string>
    <string name="nombre_liga">Nombre de liga</string>
    <string name="que_desea_hacer">¿Qué desea hacer?</string>
    <string name="clasificacion_titulo">Clasificación</string>
    <string name="usuario_1">Usuario 1</string>
    <string name="seleccion_porra">Seleccione una porra para realizar</string>
    <string name="top_primeros_quali">Top 3 Clasificación</string>
    <string name="top_carrera">Top 3 Carrera</string>
    <string name="pit_stop_rapido">Pit Stop más rápido</string>
    <string name="vuelta_rapida">¿Quién hará la vuelta rápida?</string>
    <string name="top_escuderia_quali">Mejor escuderia clasificación</string>
    <string name="mejor_escuderia_carrera">Mejor escuderia Carrera</string>
    <string name="nombre_piloto">Nombre del Piloto</string>
    <string name="valor_porra">Valor</string>
    <string name="seleccionar_opcion">Seleccionar</string>
    <string name="Explicación_porra">Al lado de cada opción aparecerá el valor del acierto en la clasificación</string>
    <string name="confirmaporra">¿Está seguro de la siguiente elección?</string>
    <string name="continuar">Continuar</string>
    <string name="siguientegp">Pasar a Siguiente GP</string>
</resources>